[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "joblib>=1.5.1",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.97.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pytz>=2025.2",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.0",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.65",
]
